Fix hand/mouseError from going out of view thus expanding the document

--- a/src/assets/css/single_page_css/game.css
+++ b/src/assets/css/single_page_css/game.css
@@ -9,6 +9,7 @@ body {
     box-sizing: border-box;
     background-image: url("../../../images/background.png");
     background-size: cover;
+    overflow: hidden;
 }
 
 h1, h5 {
